# logicgates

./: LICENSE  README.md  pyproject.toml  setup.cfg
logicgates/: __init__.py  consts.py  demultiplexer.py  display_truth_table.py  evalgate.py  gates.py  multiplexer.py
