[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LogicGatesLib"
version = "0.1.0"
description = "a Python Library that permits the use of ALL the logic gates simply, as simple functions, and more."
readme = "README.md"
requires-python = ">=3.0"

authors = [
  { name="BitQXZ"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Pas de dépendances
dependencies = []

[tool.setuptools.packages.find]
include = ["logicgates*"]
