[metadata]
name = logicgates
version = 0.1.0
author = BitQXZ
description = Python Library that permits the use of ALL the logic gates simply, as simple functions, and more.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gauthier-de-Lesquen/logicgates.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:

python_requires = >=3.0



